--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,8 @@ thiserror = "1.0.40"
 
 [dev-dependencies]
 anyhow = "1.0.72"
+criterion = "0.5.1"
+
+[[bench]]
+name = "parse_dted"
+harness = false
